--- a/enterprise/app/filter/react_date_range_default_theme.css
+++ b/enterprise/app/filter/react_date_range_default_theme.css
@@ -325,6 +325,10 @@
   font-weight: 600;
 }
 
+.rdrDefinedRangesWrapper .rdrStaticRangeSelected .rdrStaticRangeLabel {
+  color: var(--color-datepicker-text);
+}
+
 .rdrStaticRange {
   border: 0;
   cursor: pointer;
@@ -333,6 +337,7 @@
   border-bottom: 1px solid var(--color-datepicker-border);
   padding: 0;
   background: var(--color-datepicker-bg);
+  color: var(--color-datepicker-text);
 }
 
 .rdrStaticRange:hover .rdrStaticRangeLabel,
